zerobus-ffi/zerobus.h

typedef struct CZerobusSdk {
  uint8_t _private[0];
} CZerobusSdk;
typedef struct CResult {
  bool success;
  char *error_message;
  bool is_retryable;
} CResult;
/**
 * A single header key-value pair for C FFI
 */
typedef struct CHeader {
  char *key;
  char *value;
} CHeader;
/**
 * A collection of headers returned from Go callback
 */
typedef struct CHeaders {
  struct CHeader *headers;
  uintptr_t count;
  char *error_message;
} CHeaders;
/**
 * Function pointer type for the headers provider callback
 * The callback should return a CHeaders struct
 * The caller is responsible for freeing the returned CHeaders using zerobus_free_headers
 */
typedef struct CHeaders (*HeadersProviderCallback)(void *user_data);
/**
 * Callback invoked when an async proto record ingest completes.
 * `offset` is -1 on error; check `result->success` for details.
 * `result` is valid only for the duration of the callback; do not store the pointer.
 * The caller must NOT free `result->error_message`; Rust frees it after the callback returns.
 */
typedef void (*IngestRecordCallback)(void *user_data, int64_t offset, const struct CResult *result);
/**
 * Callback invoked when an async void operation (e.g. wait_for_offset) completes.
 * `result` is valid only for the duration of the callback; do not store the pointer.
 * The caller must NOT free `result->error_message`; Rust frees it after the callback returns.
 */
typedef void (*VoidOperationCallback)(void *user_data, const struct CResult *result);
typedef struct CZerobusStream {
  uint8_t _private[0];
} CZerobusStream;
typedef struct CStreamConfigurationOptions {
  uintptr_t max_inflight_requests;
  bool recovery;
  uint64_t recovery_timeout_ms;
  uint64_t recovery_backoff_ms;
  uint32_t recovery_retries;
  uint64_t server_lack_of_ack_timeout_ms;
  uint64_t flush_timeout_ms;
  int32_t record_type;
  uint64_t stream_paused_max_wait_time_ms;
  bool has_stream_paused_max_wait_time_ms;
  uint64_t callback_max_wait_time_ms;
  bool has_callback_max_wait_time_ms;
} CStreamConfigurationOptions;
/**
 * Callback invoked when async stream creation completes.
 * `stream` is NULL on error; check `result->success` for details.
 * On success, the caller owns `stream` and must free it with `zerobus_stream_free`.
 * `result` is valid only for the duration of the callback; do not store the pointer.
 * The caller must NOT free `result->error_message`; Rust frees it after the callback returns.
 */
typedef void (*CreateStreamCallback)(void *user_data,
                                     struct CZerobusStream *stream,
                                     const struct CResult *result);
/**
 * Represents a single record (either Proto or JSON)
 */
typedef struct CRecord {
  bool is_json;
  uint8_t *data;
  uintptr_t data_len;
} CRecord;
/**
 * Represents an array of records
 */
typedef struct CRecordArray {
  struct CRecord *records;
  uintptr_t len;
} CRecordArray;
/**
 * Create a new ZerobusSdk instance
 * Returns NULL on error. Check the result parameter for error details.
 */
struct CZerobusSdk *zerobus_sdk_new(const char *zerobus_endpoint,
                                    const char *unity_catalog_url,
                                    struct CResult *result);
/**
 * Free the SDK instance
 */
void zerobus_sdk_free(struct CZerobusSdk *sdk);
/**
 * Create a stream with OAuth authentication
 * descriptor_proto_bytes: protobuf-encoded DescriptorProto (can be NULL for JSON streams)
 */
struct CZerobusStream *zerobus_sdk_create_stream(struct CZerobusSdk *sdk,
                                                 const char *table_name,
                                                 const uint8_t *descriptor_proto_bytes,
                                                 uintptr_t descriptor_proto_len,
                                                 const char *client_id,
                                                 const char *client_secret,
                                                 const struct CStreamConfigurationOptions *options,
                                                 struct CResult *result);
/**
 * Create a stream with OAuth authentication asynchronously.
 *
 * Identical to `zerobus_sdk_create_stream` but non-blocking: returns immediately and
 * invokes `callback` on a Tokio runtime thread when the operation completes.
 *
 * The caller must ensure `sdk` remains valid until `callback` is invoked.
 * All byte/string pointer arguments are copied before this function returns.
 */
void zerobus_sdk_create_stream_async(struct CZerobusSdk *sdk,
                                     const char *table_name,
                                     const uint8_t *descriptor_proto_bytes,
                                     uintptr_t descriptor_proto_len,
                                     const char *client_id,
                                     const char *client_secret,
                                     const struct CStreamConfigurationOptions *options,
                                     CreateStreamCallback callback,
                                     void *user_data);
/**
 * Create a stream with a custom headers provider callback
 * This allows you to provide custom authentication headers via a Go callback function
 */
struct CZerobusStream *zerobus_sdk_create_stream_with_headers_provider(struct CZerobusSdk *sdk,
                                                                       const char *table_name,
                                                                       const uint8_t *descriptor_proto_bytes,
                                                                       uintptr_t descriptor_proto_len,
                                                                       HeadersProviderCallback headers_callback,
                                                                       void *user_data,
                                                                       const struct CStreamConfigurationOptions *options,
                                                                       struct CResult *result);
/**
 * Create a stream with a custom headers provider callback asynchronously.
 *
 * Identical to `zerobus_sdk_create_stream_with_headers_provider` but non-blocking:
 * returns immediately and invokes `callback` on a Tokio runtime thread when the
 * operation completes.
 *
 * The caller must ensure `sdk` and the headers-provider state behind `user_data`
 * remain valid until `callback` is invoked.
 * All byte/string pointer arguments are copied before this function returns.
 */
void zerobus_sdk_create_stream_with_headers_provider_async(struct CZerobusSdk *sdk,
                                                           const char *table_name,
                                                           const uint8_t *descriptor_proto_bytes,
                                                           uintptr_t descriptor_proto_len,
                                                           HeadersProviderCallback headers_callback,
                                                           void *headers_user_data,
                                                           const struct CStreamConfigurationOptions *options,
                                                           CreateStreamCallback callback,
                                                           void *completion_user_data);
/**
 * Recreate a stream from an existing stream
 * This is used for recovery scenarios where the stream needs to be re-established
 */
struct CZerobusStream *zerobus_sdk_recreate_stream(struct CZerobusSdk *sdk,
                                                   struct CZerobusStream *stream,
                                                   struct CResult *result);
/**
 * Recreate a stream from an existing stream asynchronously.
 *
 * Identical to `zerobus_sdk_recreate_stream` but non-blocking: returns immediately and
 * invokes `callback` on a Tokio runtime thread when the operation completes.
 *
 * The caller must ensure `sdk` and `stream` remain valid until `callback` is invoked.
 * On success, the caller owns the new stream and must free it with `zerobus_stream_free`.
 * `result` is valid only for the duration of the callback; do not store the pointer.
 * The caller must NOT free `result->error_message`; Rust frees it after the callback returns.
 */
void zerobus_sdk_recreate_stream_async(struct CZerobusSdk *sdk,
                                       struct CZerobusStream *stream,
                                       CreateStreamCallback callback,
                                       void *user_data);
/**
 * Free a stream instance
 */
void zerobus_stream_free(struct CZerobusStream *stream);
/**
 * Ingest a record (protobuf encoded)
 * Returns the offset directly
 * Returns -1 on error
 */
int64_t zerobus_stream_ingest_proto_record(struct CZerobusStream *stream,
                                           const uint8_t *data,
                                           uintptr_t data_len,
                                           struct CResult *result);
/**
 * Ingest a protobuf record asynchronously.
 *
 * Identical to `zerobus_stream_ingest_proto_record` but non-blocking: returns immediately and
 * invokes `callback` on a Tokio runtime thread when the operation completes.
 *
 * `data` is copied before this function returns, so the buffer does not need to remain
 * valid after the call. The caller must ensure `stream` remains valid until `callback` is invoked.
 */
void zerobus_stream_ingest_proto_record_async(struct CZerobusStream *stream,
                                              const uint8_t *data,
                                              uintptr_t data_len,
                                              IngestRecordCallback callback,
                                              void *user_data);
/**
 * Ingest a JSON record
 * Returns the offset directly
 * Returns -1 on error
 */
int64_t zerobus_stream_ingest_json_record(struct CZerobusStream *stream,
                                          const char *json_data,
                                          struct CResult *result);
/**
 * Ingest a JSON record asynchronously.
 *
 * Identical to `zerobus_stream_ingest_json_record` but non-blocking: returns immediately and
 * invokes `callback` on a Tokio runtime thread when the operation completes.
 *
 * `json_data` is copied before this function returns, so the string does not need to remain
 * valid after the call. The caller must ensure `stream` remains valid until `callback` is invoked.
 */
void zerobus_stream_ingest_json_record_async(struct CZerobusStream *stream,
                                             const char *json_data,
                                             IngestRecordCallback callback,
                                             void *user_data);
/**
 * Ingest a batch of protobuf records
 * Returns the offset of the last record in the batch, or -1 on error
 * Returns -2 if batch is empty
 */
int64_t zerobus_stream_ingest_proto_records(struct CZerobusStream *stream,
                                            const uint8_t *const *records,
                                            const uintptr_t *record_lens,
                                            uintptr_t num_records,
                                            struct CResult *result);
/**
 * Ingest a batch of protobuf records asynchronously.
 *
 * Identical to `zerobus_stream_ingest_proto_records` but non-blocking: returns immediately and
 * invokes `callback` on a Tokio runtime thread when the operation completes.
 *
 * All record data is copied before this function returns. The caller must ensure `stream`
 * remains valid until `callback` is invoked.
 * `callback` receives the offset of the last record, or -1 on error, -2 if batch is empty.
 */
void zerobus_stream_ingest_proto_records_async(struct CZerobusStream *stream,
                                               const uint8_t *const *records,
                                               const uintptr_t *record_lens,
                                               uintptr_t num_records,
                                               IngestRecordCallback callback,
                                               void *user_data);
/**
 * Ingest a batch of JSON records
 * Returns the offset of the last record in the batch, or -1 on error
 * Returns -2 if batch is empty
 */
int64_t zerobus_stream_ingest_json_records(struct CZerobusStream *stream,
                                           const char *const *json_records,
                                           uintptr_t num_records,
                                           struct CResult *result);
/**
 * Ingest a batch of JSON records asynchronously.
 *
 * Identical to `zerobus_stream_ingest_json_records` but non-blocking: returns immediately and
 * invokes `callback` on a Tokio runtime thread when the operation completes.
 *
 * All JSON strings are copied before this function returns. The caller must ensure `stream`
 * remains valid until `callback` is invoked.
 * `callback` receives the offset of the last record, or -1 on error, -2 if batch is empty.
 */
void zerobus_stream_ingest_json_records_async(struct CZerobusStream *stream,
                                              const char *const *json_records,
                                              uintptr_t num_records,
                                              IngestRecordCallback callback,
                                              void *user_data);
/**
 * Free error message string
 */
void zerobus_free_error_message(char *message);